# C-Language

./: .gitignore  README.md
C-CompletoETotal/cap05/: pointers.c
C_Projects/client/: client  client.c
C_Projects/listener/: listener  listener.c
C_Projects/monitorIP/: main  main.c
C_Projects/odroid-GPIO/: a  gpio.c  gpio.h  main.c  output  test  test.c
C_Projects/server/: server  server.c
C_Projects/showip/: show_ip  show_ip.c
C_Projects/signal/: ctrlC_block.c  output
C_Projects/sigpoll/: output  using_sigpoll.c
C_Projects/talker/: talker  talker.c
Execicios/AC-Unidimen/: ac90rule.c
Execicios/BubbleSort/: BubbleSort.c
Execicios/Pointers/: Calculate_Dot_Product_Of_Vectors.c
Execicios/TrianguloPascal/: TrianguloPascal.c  binomio.h
Test_Project/: CMakeLists.txt
Test_Project/include/: CBook.h  Utils.h  binomio.h
Test_Project/lib/: CBook.c  CMakeLists.txt  Utils.c  binomio.c
Test_Project/scr/: CMakeLists.txt  JogoDaVelha.c  main.c
